--- a/views/game/index.ejs
+++ b/views/game/index.ejs
@@ -8,7 +8,7 @@
             body {
                 margin: 0px;
                 padding: 0px;
-                background: black;
+                /*background: black;*/
             }
         </style>
     </head>
