--- a/views/game/index.ejs
+++ b/views/game/index.ejs
@@ -4,6 +4,12 @@
         <meta charset="UTF-8" />
         <title>Phaser Development Enviroment</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
+
+        <script type="text/javascript" src="/scripts/phaser-ce/build/phaser.js"></script>
+        <script type="text/javascript" src="/js/Boot.js"></script>
+        <script type="text/javascript" src="/js/Preload.js"></script>
+        <script type="text/javascript" src="/js/Game.js"></script>
+
         <style type="text/css">
             body {
                 margin: 0px;
@@ -13,7 +19,7 @@
         </style>
     </head>
     <body>
-        <script type="text/javascript" src="/scripts/phaser-ce/build/phaser.min.js"></script>
+        <!-- include the main game file -->
         <script type="text/javascript" src="/js/main.js"></script>
     </body>
 </html>
